# btgithooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
btgithooks/: check_untitled.py
